--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,19 +2,19 @@ name: 爬取同欣产品地址
 
 on:
   schedule:
-    - cron: '0 19 * * 3'   # 每周四 03:00 北京时间
+    - cron: '0 19 * * 3' # 每周四 03:00 北京时间
   workflow_dispatch:
 
 jobs:
   crawl:
     runs-on: ubuntu-latest
     permissions:
-      contents: write          # ① 给 GITHUB_TOKEN 开写权限
+      contents: write # ① 给 GITHUB_TOKEN 开写权限
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.PAT }}   # ② 推荐用 PAT，回写才稳
+          token: ${{ secrets.PAT }} # ② 推荐用 PAT，回写才稳
           fetch-depth: 0
 
       - name: Set up Python
@@ -28,13 +28,25 @@ jobs:
       - name: Run crawler
         run: python main.py
 
-      - name: Commit & push JSON
+      # ▼▼▼▼▼▼▼▼▼▼▼▼▼【 只修改这里 】▼▼▼▼▼▼▼▼▼▼▼▼▼
+      - name: Commit & push data
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git pull origin main --rebase || true   # ③ 先拉
-          git add *.json
+          git pull origin main --rebase || true
+
+          # 1. 定义一个变量来存储 YYYY-MM-DD 格式的日期/目录名
+          #    这和你的 Python 脚本输出目录格式保持一致
+          TODAY_DIR=$(date +'%Y-%m-%d')
+
+          # 2. 修改 git add 命令，不再是 *.json，而是直接添加新建的日期目录
+          #    这样就能把 '2025-09-25/' 目录下的所有文件都添加进去
+          git add "$TODAY_DIR/"
+
+          # 3. 检查是否有文件被暂存 (staged)，如果有，才执行提交和推送
+          #    同时，优化 commit message，使其包含完整的日期
           git diff --cached --quiet || (
-            git commit -m "auto: update clinic data $(date +%m%d)" &&
-            git push origin main                  # ④ 显式指定分支
+            git commit -m "auto: update clinic data for $TODAY_DIR" &&
+            git push origin main
           )
+      # ▲▲▲▲▲▲▲▲▲▲▲▲▲【 修改结束 】▲▲▲▲▲▲▲▲▲▲▲▲▲
